@@ -153,9 +153,9 @@ this repository contains the full copyright notices and license terms. -->
                     <image name="tryton-dialog-information"/>
                     <group col="1" id="labels">
                         <label string="You can now add some users into the system."
-                            align="0.0" id="add"/>
+                            yalign="0.0" id="add"/>
                         <label string="Be careful that the login must be unique!"
-                            align="0.0" id="carefull"/>
+                            yalign="0.0" id="carefull"/>
                     </group>
                 </form>
                 ]]>
